# electron-react-neon-typescript-graspd-like-quick-start

./: .eslintrc.json  .gitignore  .prettierrc.json  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.ts
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
src/: global.d.ts
src/main/: index.ts
src/native-addon/: package.json
src/native-addon/native/: Cargo.toml
src/preload/: preload.ts
src/renderer/: App.tsx  index.tsx
